# src/main/java/com/demo/catalogue/administration/controller/StudentsController.java
@@ -1,26 +1,25 @@
-package com.demo.catalogue.students.controller;
+package com.demo.catalogue.administration.controller;
 
+import com.demo.catalogue.administration.service.ManageStudents;
+import com.demo.catalogue.common.GlobalExceptionHandler;
 import com.demo.catalogue.model.student.entity.Student;
-import com.demo.catalogue.model.student.service.StudentService;
-import com.example.api.StudentsApi;
-import com.example.model.ProfessorResponse;
+import com.example.api.AdminApi;
 import com.example.model.StudentRequest;
 import com.example.model.StudentResponse;
 import com.example.model.UpdateStudentRequest;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
-import org.springframework.web.reactive.function.client.WebClient;
 
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/api")
-public class StudentsController implements StudentsApi {
+public class StudentsController implements AdminApi {
     //apel prin resttemplate la didactic personal
 
     // microservice cu springcloud care sa se conecteze la github unde sunt salvate configurarile fisierele
@@ -31,43 +30,34 @@ public class StudentsController implements StudentsApi {
     // care sa insereze datele start-up script sql pentru creare date initiale
 
     //readme de explicat continutul pachetelor si alegerea design-ului
+    private static final Logger log = LoggerFactory.getLogger(GlobalExceptionHandler.class);
 
-    private static final String BASE_URL = "http://localhost:8080/api/professors";
-
-    private final StudentService studentService;
-    private final WebClient webClient;
+    private final ManageStudents manageStudents;
 
     @Autowired
-    public StudentsController(StudentService studentService, WebClient webClient) {
-        this.studentService = studentService;
-        this.webClient = webClient;
+    public StudentsController(ManageStudents manageStudents) {
+        this.manageStudents = manageStudents;
     }
 
     @Override
     public ResponseEntity<Void> createStudent(StudentRequest request) {
-        Student student = new Student();
-        student.setName(request.getName());
-        student.setCatCode(request.getCatalogueCode());
-        student.setCode(request.getStudentCode());
-
-        studentService.create(student);
-
+        manageStudents.createStudent(toEntity(request));
+        log.info("Create student with student code = {}", request.getStudentCode());
         return ResponseEntity.status(201).build();
     }
 
     @Override
     public ResponseEntity<List<StudentResponse>> getAllStudents() {
-        List<StudentResponse> responses = studentService.getAll()
+        List<StudentResponse> responses = manageStudents.findStudents()
                 .stream()
                 .map(this::toResponse)
                 .collect(Collectors.toList());
         return ResponseEntity.ok(responses);
     }
 
-
      @Override
      public ResponseEntity<StudentResponse> getStudentById(Integer id){
-        return null;
+        return ResponseEntity.ok(toResponse(manageStudents.findStudent(id.longValue())));
      }
 
     @Override
@@ -77,31 +67,24 @@ public class StudentsController implements StudentsApi {
         student.setCatCode(request.getCatalogueCode());
         student.setCode(request.getStudentCode());
 
-        studentService.update(id.longValue(), student);
+        manageStudents.updateStudent(id.longValue(), student);
+        log.info("Update student with student code = {}", request.getStudentCode());
         return ResponseEntity.ok().build();
     }
 
     @Override
     public ResponseEntity<Void> deleteStudent(Integer id) {
-        studentService.delete(id.longValue());
+        manageStudents.removeStudent(id.longValue());
+        log.info("Delete student with id={}", id);
         return ResponseEntity.noContent().build();
     }
 
-    //TODO putem utiliza codul studentului pentru a extrage profesorii dontr-o clasa
-    //TODO asta inseamna o interogare in plus pentru a extraga class code si anul bazat pe codul studentului
-
-    @Override
-    public ResponseEntity<List<ProfessorResponse>> getProfessorsForStudent(String classCode, Long year) {
-        String url = BASE_URL + "/{classCode}/student?year={year}";
-
-        List<ProfessorResponse> professors = webClient.get()
-                .uri(url, classCode, year)
-                .retrieve()
-                .bodyToMono(ProfessorResponse[].class)
-                .map(array -> array != null ? Arrays.asList(array) : Collections.<ProfessorResponse>emptyList())
-                .block();
-
-        return ResponseEntity.ok(professors);
+    public static Student toEntity(StudentRequest request) {
+        Student student = new Student();
+        student.setName(request.getName());
+        student.setCatCode(request.getCatalogueCode());
+        student.setCode(request.getStudentCode());
+        return student;
     }
 
     private StudentResponse toResponse(Student student) {
